# engineering-loop-schemas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION.md  README.md  README.pt-BR.md  SECURITY.md  SUPPORT.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml  release-evidence.yml
docs/adr/: 0001-no-progress-and-stall-signals.md  0002-command-evidence-integrity.md  0003-wire-identity-and-source-provenance.md
examples/: harness-self-improvement.yaml  trusted-evidence.json  trusted-verdict.json
schemas/: builder-result.schema.json  contract.schema.json  evidence.schema.json  verdict.schema.json
scripts/: render_vendor_bundle.py
src/loop_schemas/: __init__.py  _stdlib_jsonschema.py  models.py  schema_resources.py  validate_contract.py
tests/: conftest.py  test_cli.py  test_contract_validation.py  test_evidence_command_integrity.py  test_example_contract.py  test_models_match_schemas.py  test_package_artifacts.py  test_package_version.py  test_python314_lint_compatibility.py  test_schemas_are_valid.py  test_stdlib_schema_parity.py  test_vendor_bundle.py  test_verdict_validation.py  test_workflows.py
