[project]
name = "loop-schemas"
version = "0.3.0"
description = "Canonical schemas with standard-library JSON validation and optional PyYAML support for Evidence-Gated Engineering Loops."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
    "ruff==0.15.21",
    "pyright==1.1.407",
    "pytest==9.1.1",
    "pytest-cov==6.0.0",
    "jsonschema==4.25.0",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_schemas"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "loop_schemas/schemas"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# The self-referencing `from_dict` return annotations in models.py are
# quoted on purpose (see the module-level comment there); only suppress
# UP037 there, not project-wide, so a real removable-quote elsewhere would
# still be caught.
"src/loop_schemas/models.py" = ["UP037"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

# pytest fixtures (capsys, tmp_path, ...) and jsonschema's validate() are not
# fully typed; relax the "unknown type" family of strict checks for tests
# only. src/ stays under full strict mode with zero suppressions.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
addopts = "--cov=loop_schemas --cov=scripts --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/loop_schemas", "scripts"]
